Bug#27070 server logs are created unrequested and in wrong directory  - Avoid defaault log file names looking like <hostname>.pid.slow.log   by using the FN_REPLACE_EXT flag to 'fn_format'  - Remove the default log files generated by log_state.test before    test completes